src/format/snapshots/powercfg__format__text__tests__print_requests_empty.snap
---
source: src/format/text.rs
assertion_line: 648
expression: s
---
POWER REQUEST STATUS
==================================================

[SYSTEM INHIBITORS]
------------------------------
  None.

[KERNEL WAKE LOCKS]
------------------------------
  None.

[AUDIO STREAMS]
------------------------------
  None.

[VIRTUAL MACHINES]
------------------------------
  None.

==================================================
No active sleep blockers detected.
