src/format/snapshots/powercfg__format__text__tests__print_requests_only_non_sleep.snap
---
source: src/format/text.rs
expression: s
---
POWER REQUEST STATUS
==================================================

[SYSTEM INHIBITORS]
------------------------------

[KERNEL WAKE LOCKS]
------------------------------
  None.

[AUDIO STREAMS]
------------------------------
  None.

[VIRTUAL MACHINES]
------------------------------
  None.

==================================================
Total sleep blockers found: 2
