src/format/snapshots/powercfg__format__text__tests__print_requests_typical_verbose.snap
---
source: src/format/text.rs
assertion_line: 628
expression: s
---
POWER REQUEST STATUS
==================================================

[SYSTEM INHIBITORS]
------------------------------
  Process: firefox (PID: 12345)
    User: 1000
    Blocks: sleep:idle
    Reason: Playing audio


[KERNEL WAKE LOCKS]
------------------------------
  audio

[AUDIO STREAMS]
------------------------------
  Stream ID: 123
    Client: Firefox
  Stream ID: 124
    Client: Spotify

[VIRTUAL MACHINES]
------------------------------
  QEMU/KVM VM (PID: 5678)

[USB WAKEUP DEVICES]
------------------------------
  Logitech USB Receiver (1-2)

==================================================
Total sleep blockers found: 6
